--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,10 +11,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 .header-container {
-  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  padding: 30px 0px;
+  width: 500px;
+  align-items: center;
 }
 
 .header {
@@ -38,14 +43,19 @@
 .cta-button {
   height: 45px;
   border: 0;
-  width: auto;
+  width: 100%;
   padding-left: 40px;
   padding-right: 40px;
   border-radius: 5px;
+  margin-top: 20px;
   cursor: pointer;
   font-size: 16px;
   font-weight: bold;
   color: white;
+}
+
+.width-100 {
+  width: 100%;
 }
 
 .connect-wallet-button {
@@ -121,5 +131,41 @@
   }
   100% {
     background-position: 0% 50%;
+  }
+}
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
